<resources>
    <string name="app_name">NearVogu</string>

    <string name="title_activity_note_editor">NoteEditorActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="font">Напомнить</string>
    <string name="purple_menuitem_title">Розовый</string>
    <string name="yellow_menuitem_title">Желтый</string>
    <string name="green_menuitem_title">Зеленый</string>
    <string name="blue_menuitem_title">Голубой</string>
    <string name="white_menuitem_title">Белый</string>
    <string name="color_menu_btn">Цвет</string>
    <string name="done_title">Готово</string>
    <string name="set_title">Установить</string>
    <string name="delete_title">Удалить</string>
    <string name="clear_title">Очистить</string>
    <string name="change_title">Изменить</string>
    <string name="channel_name">Напоминание</string>
    <string name="channel_description">Напоминания, присылаемые из приложение NearVogu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="s1">RssFeed</string>
    <string name="menu_home">Заметки</string>
    <string name="look_at_schedule">Просмотреть</string>
    <string name="menu_gallery">Новости</string>
    <string name="menu_slideshow">Расписание</string>
    <string name="read_more_btn">Читать</string>
    <string name="news_photo">News photo</string>
    <string name="download_more_news">Загрузить еще</string>
    <string name="refresh">Обновить</string>
    <string name="download_more">Загрузить еще</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">Настройки</string>
    <string name="qualification">Квалификация</string>
    <string name="teachingForm">Форма обучения</string>
    <string name="institute">Институт</string>
    <string name="napravlenie">Направление</string>
    <string name="Course">Курс</string>
    <string name="napravlennost">Направленность</string>
    <string name="menu_pdfReader">Pdf Читатель</string>
    <string name="back">Назад</string>
    <string name="next">Вперёд</string>
    <string name="zoom_in">Отдалить</string>
    <string name="zoom_out">Приблизить</string>
    <string name="acess_hint">Окно для написания заметки</string>
    <string name="create_new_note">Создать новую заметку</string>

</resources>