<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/workspaceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/noticeBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edititorArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/LinearLayout"
            android:layout_below="@+id/noticeBox"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textNoSuggestions"
            android:hint="@string/acess_hint"/>

        <LinearLayout
            android:id="@+id/LinearLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="0dp"
            android:fitsSystemWindows="true"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp">

            <Button
                android:id="@+id/notice_menu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/font" />

            <Button
                android:id="@+id/color_menu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/color_menu_btn" />

            <Button
                android:id="@+id/done_menu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/done_title" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>