<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/course_nb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="16dp"
        android:text="@string/Course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/napravlennost" />

    <TextView
        android:id="@+id/napravlennost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/napravlennost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/napravlenie_tb" />

    <TextView
        android:id="@+id/institute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="16dp"
        android:text="@string/institute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teachingForm" />

    <TextView
        android:id="@+id/napravlenie_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/napravlenie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/institute" />

    <Spinner
        android:id="@+id/teachingFormSpinner"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/teachingForm"
        app:layout_constraintTop_toBottomOf="@+id/qualificationSpinner" />

    <Spinner
        android:id="@+id/instituteSpinner"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/institute"
        app:layout_constraintTop_toBottomOf="@+id/teachingFormSpinner" />

    <Spinner
        android:id="@+id/napravlenieSpinner"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/napravlenie_tb"
        app:layout_constraintTop_toBottomOf="@+id/instituteSpinner" />

    <Spinner
        android:id="@+id/napravlennostSpinner"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/napravlennost"
        app:layout_constraintTop_toBottomOf="@+id/napravlenieSpinner" />

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/course_nb"
        app:layout_constraintTop_toBottomOf="@+id/napravlennostSpinner" />

    <Spinner
        android:id="@+id/qualificationSpinner"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/qualification"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qualification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/qualification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teachingForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/teachingForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qualification" />

    <Button
        android:id="@+id/authorisation_done"
        android:layout_width="166dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/done_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>